wip: up to step 6 in tut

--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,10 +1,10 @@
+<div *ngIf="hero">
 <h2>{{hero.name | uppercase}} DETAILS</h2>
-<div *ngIf="selectedHero">
   <span>id: {{hero.id}} </span>
   <span>name: {{hero.name}} </span>
 
   <div>
     <label>Name: </label>
-    <input [(ngModel)]="selectedHero.name" placeholder="name" />
+    <input [(ngModel)]="hero.name" placeholder="name" />
   </div>
 </div>
