--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <h1>{{title}}</h1>
-<app-hero-detail [hero]="selectedHero"></app-hero-detail>
 <app-heroes></app-heroes>
-
+<app-messages></app-messages>
