--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -7,6 +7,9 @@
     <label>Name: </label>
     <input [(ngModel)]="hero.name" placeholder="name" />
   </div>
+  <div>
+    <button (click)="save()">Save</button>
+  </div>
 </div>
 
 <button (click)="goBack()">Go Back</button>
