--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -4,5 +4,17 @@
     <a routerLink="/detail/{{hero.id}}">
     <span class='badge'>{{hero.id}}</span> {{hero.name}}
     </a>
+    <button (click)="delete(hero)"
+    class="delete"
+    title="Delete Hero">Delete</button>
   </li>
 </ul>
+<div>
+    <label>Hero name:
+      <input #heroName />
+    </label>
+    <!-- (click) passes input value to add() and then clears the input -->
+    <button (click)="add(heroName.value); heroName.value=''">
+      add
+    </button>
+  </div>
